--- a/src/main/resources/com/example/prism/select-view.fxml
+++ b/src/main/resources/com/example/prism/select-view.fxml
@@ -11,10 +11,10 @@
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" alignment="CENTER" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.prism.SelectController">
    <Label layoutX="252.0" layoutY="14.0" text="Select Shape" />
    <HBox alignment="CENTER">
-      <Button maxWidth="Infinity" fx:id="squareBtn" onMouseClicked="#selectShape" />
-      <Button maxWidth="Infinity" fx:id="triangleBtn" onMouseClicked="#selectShape" />
-      <Button maxWidth="Infinity" fx:id="rectangleBtn" onMouseClicked="#selectShape" />
-      <Button maxWidth="Infinity" fx:id="circleBtn" onMouseClicked="#selectShape" />
+      <Button maxWidth="Infinity" fx:id="squareBtn"  />
+      <Button maxWidth="Infinity" fx:id="triangleBtn"  />
+      <Button maxWidth="Infinity" fx:id="rectangleBtn"  />
+      <Button maxWidth="Infinity" fx:id="circleBtn"  />
    </HBox>
    <TextField layoutX="62.0" layoutY="188.0" fx:id="heightField" />
    <Label layoutX="14.0" layoutY="192.0" text="Height:" />
