deleted hard coded controllers

--- a/src/main/resources/com/example/prism/calculate-circle-volume-view.fxml
+++ b/src/main/resources/com/example/prism/calculate-circle-volume-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" alignment="CENTER" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.prism.controllers.CalculateCircleVolumeController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" alignment="CENTER" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <Label text="radius"/>
     <TextField fx:id="radiusField"/>
     <Label text="cm."/>
