--- a/src/main/resources/com/example/prism/calculate-square-volume-view.fxml
+++ b/src/main/resources/com/example/prism/calculate-square-volume-view.fxml
@@ -6,8 +6,10 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" alignment="CENTER" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.prism.controllers.CalculateSquareVolumeController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" alignment="CENTER" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <Label text="side"/>
     <TextField fx:id="sideField"/>
     <Label text="cm."/>
+    <Button text="Calculate" onAction="#Calculate"/>
+    <Label fx:id="resultLabel" visible="false"/>
 </VBox>
