--- a/src/main/resources/com/example/prism/calculate-triangle-volume-view.fxml
+++ b/src/main/resources/com/example/prism/calculate-triangle-volume-view.fxml
@@ -13,4 +13,6 @@
     <Label text="base height"/>
     <TextField fx:id="baseHeightField"/>
     <Label text="cm."/>
+    <Button text="Calculate" onAction="#Calculate"/>
+    <Label fx:id="resultLabel" visible="false"/>
 </VBox>
