--- a/src/main/resources/com/example/prism/select-view.fxml
+++ b/src/main/resources/com/example/prism/select-view.fxml
@@ -10,14 +10,16 @@
 <?import javafx.scene.layout.HBox?>
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" alignment="CENTER" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.prism.SelectController">
    <Label layoutX="252.0" layoutY="14.0" text="Select Shape" />
-   <HBox alignment="CENTER">
+   <HBox alignment="CENTER" spacing="5">
       <Button maxWidth="Infinity" fx:id="squareBtn"  />
       <Button maxWidth="Infinity" fx:id="triangleBtn"  />
       <Button maxWidth="Infinity" fx:id="rectangleBtn"  />
       <Button maxWidth="Infinity" fx:id="circleBtn"  />
    </HBox>
-   <TextField layoutX="62.0" layoutY="188.0" fx:id="heightField" />
-   <Label layoutX="14.0" layoutY="192.0" text="Height:" />
-   <Label layoutX="219.0" layoutY="192.0" text="cm" />
+   <HBox alignment="CENTER" spacing="5">
+      <Label layoutX="14.0" layoutY="192.0" text="Height:"/>
+      <TextField layoutX="62.0" layoutY="188.0" maxWidth="300" fx:id="heightField" />
+      <Label layoutX="219.0" layoutY="192.0" text="cm" />
+   </HBox>
    <Button layoutX="266.0" layoutY="268.0" mnemonicParsing="false" text="Next" fx:id="nextBtn" onAction="#onNextBtnClick" />
 </VBox>
