--- a/src/main/resources/com/example/prism/select-view.fxml
+++ b/src/main/resources/com/example/prism/select-view.fxml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.VBox?>
-
-
 <?import javafx.scene.layout.HBox?>
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" alignment="CENTER" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.prism.SelectController">
-   <Label layoutX="252.0" layoutY="14.0" text="Select Shape" />
+
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<VBox alignment="CENTER" spacing="20" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.prism.SelectController">
+   <Label text="Select Shape" style="-fx-font-size: 25px; -fx-font-weight: bold"/>
+   <GridPane hgap="20" vgap="20" >
+      <columnConstraints>
+         <ColumnConstraints hgrow="ALWAYS" />
+         <ColumnConstraints hgrow="ALWAYS" />
+         <ColumnConstraints hgrow="ALWAYS" />
+         <ColumnConstraints hgrow="ALWAYS" />
+      </columnConstraints>
+      <Button GridPane.columnIndex="0" maxWidth="Infinity" maxHeight="Infinity" fx:id="squareBtn"  />
+      <Button GridPane.columnIndex="1" maxWidth="Infinity" maxHeight="Infinity" fx:id="triangleBtn"  />
+      <Button GridPane.columnIndex="2" maxWidth="Infinity" maxHeight="Infinity" fx:id="rectangleBtn"  />
+      <Button GridPane.columnIndex="3" maxWidth="Infinity" maxHeight="Infinity" fx:id="circleBtn"  />
+   </GridPane>
    <HBox alignment="CENTER" spacing="5">
-      <Button maxWidth="Infinity" fx:id="squareBtn"  />
-      <Button maxWidth="Infinity" fx:id="triangleBtn"  />
-      <Button maxWidth="Infinity" fx:id="rectangleBtn"  />
-      <Button maxWidth="Infinity" fx:id="circleBtn"  />
+      <Label text="Height:"/>
+      <TextField maxWidth="300" fx:id="heightField" />
+      <Label text="cm" />
    </HBox>
-   <HBox alignment="CENTER" spacing="5">
-      <Label layoutX="14.0" layoutY="192.0" text="Height:"/>
-      <TextField layoutX="62.0" layoutY="188.0" maxWidth="300" fx:id="heightField" />
-      <Label layoutX="219.0" layoutY="192.0" text="cm" />
-   </HBox>
-   <Button layoutX="266.0" layoutY="268.0" mnemonicParsing="false" text="Next" fx:id="nextBtn" onAction="#onNextBtnClick" />
+   <Button maxWidth="300" text="Next" fx:id="nextBtn" onAction="#onNextBtnClick" />
 </VBox>
