--- a/src/main/resources/com/example/prism/calculate-square-volume-view.fxml
+++ b/src/main/resources/com/example/prism/calculate-square-volume-view.fxml
@@ -6,10 +6,16 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" alignment="CENTER" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
-    <Label text="side"/>
-    <TextField fx:id="sideField"/>
-    <Label text="cm."/>
-    <Button text="Calculate" onAction="#Calculate"/>
-    <Label fx:id="resultLabel" visible="false"/>
+<VBox alignment="CENTER" spacing="20" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+    <Label text="Square Base Prism Volume" style="-fx-font-size: 20px; -fx-font-weight: bold"/>
+    <HBox alignment="CENTER" spacing="5">
+        <Label text="side"/>
+        <TextField maxWidth="300" fx:id="sideField"/>
+        <Label text="cm."/>
+    </HBox>
+    <Button maxWidth="300" text="Calculate" onAction="#Calculate"/>
+    <HBox alignment="CENTER" spacing="5" style="-fx-font-size: 15px; -fx-font-weight: bold">
+        <Label fx:id="resultTextLabel" text="Result:" visible="false"/>
+        <Label fx:id="resultLabel" visible="false"/>
+    </HBox>
 </VBox>
