--- a/src/main/resources/com/example/prism/calculate-circle-volume-view.fxml
+++ b/src/main/resources/com/example/prism/calculate-circle-volume-view.fxml
@@ -6,10 +6,16 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" alignment="CENTER" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" spacing="20" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Label text="Circle Base Prism Volume" style="-fx-font-size: 20px; -fx-font-weight: bold"/>
+<HBox alignment="CENTER" spacing="5">
     <Label text="radius"/>
-    <TextField fx:id="radiusField"/>
+    <TextField maxWidth="150" fx:id="radiusField"/>
     <Label text="cm."/>
-    <Button text="Calculate" onAction="#Calculate"/>
+</HBox>
+<Button maxWidth="150" text="Calculate" onAction="#Calculate"/>
+<HBox alignment="CENTER" spacing="5" style="-fx-font-size: 15px; -fx-font-weight: bold">
+    <Label fx:id="resultTextLabel" text="Result:"/>
     <Label fx:id="resultLabel" visible="false"/>
+</HBox>
 </VBox>
