--- a/src/main/resources/com/example/prism/calculate-square-volume-view.fxml
+++ b/src/main/resources/com/example/prism/calculate-square-volume-view.fxml
@@ -13,9 +13,9 @@
         <TextField maxWidth="300" fx:id="sideField"/>
         <Label text="cm."/>
     </HBox>
-    <Button maxWidth="300" text="Calculate" onAction="#Calculate"/>
+    <Button maxWidth="150" text="Calculate" onAction="#Calculate"/>
     <HBox alignment="CENTER" spacing="5" style="-fx-font-size: 15px; -fx-font-weight: bold">
-        <Label fx:id="resultTextLabel" text="Result:" visible="false"/>
+        <Label fx:id="resultTextLabel" text="Result:"/>
         <Label fx:id="resultLabel" visible="false"/>
     </HBox>
 </VBox>
