--- a/src/main/resources/com/example/prism/calculate-triangle-volume-view.fxml
+++ b/src/main/resources/com/example/prism/calculate-triangle-volume-view.fxml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" alignment="CENTER" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
-    <Label text="side"/>
-    <TextField fx:id="sideField"/>
-    <Label text="cm."/>
-    <Label text="base height"/>
-    <TextField fx:id="baseHeightField"/>
-    <Label text="cm."/>
-    <Button text="Calculate" onAction="#Calculate"/>
+<VBox alignment="CENTER" spacing="20" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Label text="Triangle Base Prism Volume" style="-fx-font-size: 20px; -fx-font-weight: bold"/>
+    <GridPane hgap="20" vgap="20" style="-fx-padding: 10;" >
+        <columnConstraints>
+            <ColumnConstraints hgrow="ALWAYS" />
+            <ColumnConstraints hgrow="ALWAYS" />
+        </columnConstraints>
+        <Label GridPane.rowIndex="0" GridPane.columnIndex="0" text="side"/>
+        <TextField GridPane.rowIndex="0" GridPane.columnIndex="1" maxWidth="150" fx:id="sideField"/>
+        <Label GridPane.rowIndex="0" GridPane.columnIndex="2" text="cm."/>
+
+        <Label GridPane.rowIndex="1" GridPane.columnIndex="0" text="base height"/>
+        <TextField GridPane.rowIndex="1" GridPane.columnIndex="1" maxWidth="150" fx:id="baseHeightField"/>
+        <Label GridPane.rowIndex="1" GridPane.columnIndex="2" text="cm."/>
+    </GridPane>
+<Button maxWidth="150" text="Calculate" onAction="#Calculate"/>
+<HBox alignment="CENTER" spacing="5" style="-fx-font-size: 15px; -fx-font-weight: bold">
+    <Label fx:id="resultTextLabel" text="Result:"/>
     <Label fx:id="resultLabel" visible="false"/>
+</HBox>
 </VBox>
